--- a/lab/01_zasady_wstep.ipynb
+++ b/lab/01_zasady_wstep.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,14 +144,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "A = np.random.normal(size=???)\n",
-    "B = np.random.normal(size=???)\n",
+    "A = np.random.normal(size=(9,2))\n",
+    "B = np.random.normal(size=(2,6))\n",
     "\n",
-    "C = ???\n",
+    "C = np.matmul(A, B)\n",
     "\n",
     "assert A.shape != B.shape\n",
     "assert C.shape == (9,6)"
@@ -172,25 +172,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "def sigmoid(x: np.ndarray) -> np.ndarray:\n",
-    "    ???\n",
+    "    sig = lambda t: 1. / (1. + np.exp(-t))\n",
+    "    vsig = np.vectorize(sig)\n",
+    "    return vsig(x)\n",
     "    \n",
     "    \n",
     "X = np.random.uniform(low=-10, high=10, size=(1000, 2000))\n",
     "\n",
     "assert sigmoid(X).max() <= 1.\n",
-    "assert sigmoid(X).min() >= 0."
+    "assert sigmoid(X).min() >= 0.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.67 s ± 41.5 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
    "source": [
     "%%timeit n=10\n",
     "sigmoid(X)"
@@ -239,7 +249,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.2"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
