--- a/lab/06_walidacja_krzyzowa.ipynb
+++ b/lab/06_walidacja_krzyzowa.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,12 +56,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test\n",
-    "best_gamma = best_gamma # ???\n",
+    "best_gamma = 0.1 # ???\n",
     "\n",
     "svm = SVC(gamma=best_gamma)\n",
     "svm.fit(X_train, y_train)\n",
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,12 +91,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# test\n",
-    "best_gamma = best_gamma # ???\n",
+    "best_gamma = 0.0001 # ???\n",
     "\n",
     "svm = SVC(gamma=best_gamma)\n",
     "svm.fit(X_train, y_train)\n",
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,13 +145,26 @@
     "                                                                         np.ndarray, np.ndarray]]:\n",
     "    \n",
     "    # your code here\n",
+    "    divisions, progress = [], X.shape[0] // k\n",
     "    \n",
-    "    return ???"
+    "    for i in range(k-1):\n",
+    "        X1 = np.split(X, [i*progress, i*progress+progress, X.shape[0]])\n",
+    "        y1 = np.split(y, [i*progress, i*progress+progress, y.shape[0]])\n",
+    "        division = np.concatenate((X1[0], X1[2])), np.concatenate((y1[0], y1[2])), X1[1], y1[1]\n",
+    "        divisions.append(division)\n",
+    "        \n",
+    "    i = k-1\n",
+    "    X1 = np.split(X, [i*progress, X.shape[0]])\n",
+    "    y1 = np.split(y, [i*progress, y.shape[0]])\n",
+    "    division = np.concatenate((X1[0], X1[2])), np.concatenate((y1[0], y1[2])), X1[1], y1[1]\n",
+    "    divisions.append(division)\n",
+    "    \n",
+    "    return divisions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,15 +175,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.941785063752277\n"
+     ]
+    }
+   ],
    "source": [
     "X, y = get_data(split=False)\n",
     "\n",
     "# your code here\n",
+    "k = 150\n",
+    "sacc, divisions = 0, cross_validation(X, y, k)\n",
+    "for division in divisions:\n",
+    "    svm.fit(division[0], division[1])\n",
+    "    sacc += svm.score(division[2], division[3])\n",
     "    \n",
-    "cv_accuracy = ???"
+    "cv_accuracy = sacc / k\n",
+    "print(cv_accuracy)"
    ]
   },
   {
@@ -193,15 +220,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 92,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.9525754481506693\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.svm import SVC\n",
     "\n",
     "X, y = get_data(split=False)\n",
     "\n",
-    "# your code here\n"
+    "# your code here\n",
+    "best_C, best_gamma = 10000, 0.00001\n",
+    "k = 5\n",
+    "\n",
+    "# rowniez >=94%\n",
+    "#best_C, best_gamma = 100, 0.0001\n",
+    "#k = 150\n",
+    "\n",
+    "svm = SVC(C=best_C, gamma=best_gamma)\n",
+    "svm.fit(X_train, y_train)\n",
+    "test_acc = svm.score(X_test, y_test)\n",
+    "\n",
+    "sacc, divisions = 0, cross_validation(X, y, k)\n",
+    "for division in divisions:\n",
+    "    svm.fit(division[0], division[1])\n",
+    "    sacc += svm.score(division[2], division[3])\n",
+    "    \n",
+    "cv_accuracy = sacc / k\n",
+    "print(cv_accuracy)"
    ]
   },
   {
@@ -255,7 +308,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
