--- a/lab/06_walidacja_krzyzowa.ipynb
+++ b/lab/06_walidacja_krzyzowa.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,17 +175,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.941785063752277\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X, y = get_data(split=False)\n",
     "\n",
@@ -220,17 +212,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.9525754481506693\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
     "\n",
@@ -288,8 +272,70 @@
     "\n",
     "X, y = get_data(split=False)\n",
     "\n",
-    "# yout code here\n"
+    "# your code here\n",
+    "k = 3\n",
+    "\n",
+    "esplits = cross_validation(X, y, k)\n",
+    "\n",
+    "# UWAGA poly liczy sie za dlugo niestety, dalem jako ostatnie\n",
+    "modelparams = {\n",
+    "    'rbf': (10, 0.0001),\n",
+    "    'sigmoid': (10, 0.0001),\n",
+    "    'linear': (100, 1),\n",
+    "    'poly': (1, 1),\n",
+    "}\n",
+    "\n",
+    "for kerfunc in ['rbf', 'sigmoid', 'linear', 'poly']:\n",
+    "    \n",
+    "    print(kerfunc+\":\")\n",
+    "    eaccs = []\n",
+    "\n",
+    "    for i, esplit in enumerate(esplits):\n",
+    "        \n",
+    "        print(\"iteracja\", i)\n",
+    "\n",
+    "        X1, y1 = esplit[0], esplit[1]\n",
+    "        isplits = cross_validation(X1, y1, k)\n",
+    "\n",
+    "        best_C, best_gamma = modelparams[kerfunc]\n",
+    "        print(\"C=\", best_C)\n",
+    "        print(\"gamma=\", best_gamma)\n",
+    "        \n",
+    "        svm = SVC(C=best_C, gamma=best_gamma, kernel=kerfunc)\n",
+    "        isacc = 0\n",
+    "\n",
+    "        for isplit in isplits:\n",
+    "            svm.fit(isplit[0], isplit[1])\n",
+    "            isacc += svm.score(isplit[2], isplit[3])\n",
+    "\n",
+    "        iacc = isacc / k\n",
+    "        print(\"train+val - srednia precyzja:\", iacc)\n",
+    "\n",
+    "        svm.fit(esplit[0], esplit[1])\n",
+    "        eacc = svm.score(esplit[2], esplit[3])\n",
+    "        eaccs.append(eacc)\n",
+    "        print(\"train+val+test - srednia precyzja:\", eacc)\n",
+    "\n",
+    "    print()\n",
+    "    print(\"zewnetrzne precyzje\", eaccs)\n",
+    "    print(\"zewnetrzna srednia\", sum(eaccs) / k)\n",
+    "    print()\n",
+    "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
