--- a/lab/07_regresja_logistyczna_pytorch.ipynb
+++ b/lab/07_regresja_logistyczna_pytorch.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -393,7 +393,7 @@
     "        # W trakcie predykcji nie potrzebujemy liczyć gradientów\n",
     "        ps = None\n",
     "        with torch.no_grad():\n",
-    "            z = (self.weight.view(-1,1) @ X.T).squeeze() + self.bias\n",
+    "            z = (self.weight.view(-1,1).T @ X.T).squeeze() + self.bias\n",
     "            ps = (1 / (1 + torch.exp(-z))).squeeze()\n",
     "        return ps\n",
     "            \n",
@@ -402,41 +402,17 @@
     "        return torch.FloatTensor([1.0 if ps[i] > 0.5 else 0.0 for i in range(ps.shape[0])])\n",
     "            \n",
     "    def loss(self, X: torch.Tensor, y: torch.Tensor) -> torch.Tensor:\n",
-    "        z = (self.weight.view(-1,1) @ X.T).squeeze() + self.bias\n",
-    "        y_m = (1 / (1 + torch.exp(-z))).squeeze()\n",
-    "        s = -(1-y_m) * torch.log(1-y_m) - y_m*torch.log(y_m)\n",
+    "        z = (self.weight.view(-1,1).T @ X.T).squeeze() + self.bias\n",
+    "        y_m = (1 / (1 + torch.exp(-z)))\n",
+    "        s = -(1-y) * torch.log(1-y_m) - y*torch.log(y_m)\n",
     "        return torch.mean(s)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 1., 0., 1., 0., 0., 0., 0., 1.,\n",
-      "        1., 1.])\n",
-      "tensor([0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0., 0.])\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Wrong prediction returned!",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-25-f2902e795039>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcheck_07_logistic_reg\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mLogisticRegression\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m~/MLEARN/ml2019-20/lab/checker.py\u001b[0m in \u001b[0;36mcheck_07_logistic_reg\u001b[0;34m(lr_cls)\u001b[0m\n\u001b[1;32m    367\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreturned\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    368\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 369\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mexpected\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mreturned\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-03\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-06\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Wrong prediction returned!\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    370\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    371\u001b[0m     \u001b[0mloss\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlr\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mloss\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minput_dataset\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtarget\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Wrong prediction returned!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "check_07_logistic_reg(LogisticRegression)"
    ]
