--- a/lab/07_regresja_logistyczna_pytorch.ipynb
+++ b/lab/07_regresja_logistyczna_pytorch.ipynb
@@ -562,7 +562,8 @@
     "    @staticmethod\n",
     "    def backward(self, grad_output):\n",
     "        a, b = self.saved_tensors\n",
-    "        ???\n",
+    "        df_da, df_db = 1, 1\n",
+    "        return grad_output * df_da, grad_output * df_db\n",
     "\n",
     "add_fn = MyAdd.apply\n",
     "torch.autograd.gradcheck(add_fn, (a, b), eps=1e-3, atol=1e-2, rtol=1e-2)"
@@ -583,7 +584,8 @@
     "    @staticmethod\n",
     "    def backward(self, grad_output):\n",
     "        a, b = self.saved_tensors\n",
-    "        ???\n",
+    "        df_da, df_db = 1/b, -a/(b*b)\n",
+    "        return grad_output * df_da, grad_output * df_db\n",
     "\n",
     "div_fn = MyDiv.apply\n",
     "torch.autograd.gradcheck(div_fn, (a, b), eps=1e-3, atol=1e-2, rtol=1e-2)"
@@ -599,12 +601,14 @@
     "    @staticmethod\n",
     "    def forward(self, input_):\n",
     "        self.save_for_backward(input_)\n",
-    "        ???\n",
+    "        return (1 / (1 + torch.exp(-input_)))\n",
     "\n",
     "    @staticmethod\n",
     "    def backward(self, grad_output):\n",
     "        input_, = self.saved_tensors\n",
-    "        ???\n",
+    "        f = (1 / (1 + torch.exp(-input_)))\n",
+    "        df_dinput = f * (1 - f)\n",
+    "        return grad_output * df_dinput\n",
     "    \n",
     "\n",
     "sigmoid_fn = MySigmoid.apply\n",
@@ -621,14 +625,15 @@
     "    @staticmethod\n",
     "    def forward(self, preds, labels, bias=None):\n",
     "        self.save_for_backward(preds, labels)\n",
-    "        ???\n",
+    "        return -(1-labels) * torch.log(1-preds) - labels*torch.log(preds)\n",
     "\n",
     "    @staticmethod\n",
     "    def backward(self, grad_output):\n",
     "        preds, labels = self.saved_tensors\n",
     "        grad_labels = None\n",
-    "    \n",
-    "        ???\n",
+    "        #df_dpreds = torch.log(1-labels) - torch.log(labels)\n",
+    "        df_dpreds = -(1-labels) * (1/torch.log(1-preds)) * -preds - labels * (1/preds)\n",
+    "        return grad_output * df_dpreds, fgrad_labels\n",
     "\n",
     "bce_fn = MyBinaryCrossEntropy.apply\n",
     "torch.autograd.gradcheck(bce_fn, (preds, labels), eps=1e-3, atol=1e-2, rtol=1e-1)"
