--- a/lab/07_regresja_logistyczna_pytorch.ipynb
+++ b/lab/07_regresja_logistyczna_pytorch.ipynb
@@ -633,7 +633,7 @@
     "        grad_labels = None\n",
     "        #df_dpreds = torch.log(1-labels) - torch.log(labels)\n",
     "        df_dpreds = -(1-labels) * (1/(1-preds)) * -1 - labels * (1/preds)\n",
-    "        return grad_labels, grad_output * df_dpreds\n",
+    "        return grad_output * df_dpreds, grad_labels\n",
     "\n",
     "bce_fn = MyBinaryCrossEntropy.apply\n",
     "torch.autograd.gradcheck(bce_fn, (preds, labels), eps=1e-3, atol=1e-2, rtol=1e-1)"
