--- a/lab/09_neural_networks.ipynb
+++ b/lab/09_neural_networks.ipynb
@@ -92,15 +92,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "mean() received an invalid combination of arguments - got (MNIST, axis=int), but expected one of:\n * (Tensor input, torch.dtype dtype)\n      didn't match because some of the keywords were incorrect: axis\n * (Tensor input, tuple of names dim, bool keepdim, torch.dtype dtype, Tensor out)\n * (Tensor input, tuple of ints dim, bool keepdim, torch.dtype dtype, Tensor out)\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-4-82d277c40cb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mstd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcalculate_mean_and_std\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m train_data = MNIST(\n",
+      "\u001b[0;32m<ipython-input-4-82d277c40cb1>\u001b[0m in \u001b[0;36mcalculate_mean_and_std\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m         \u001b[0mtransform\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mToTensor\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m     )\n\u001b[0;32m---> 11\u001b[0;31m     \u001b[0mmean\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m     \u001b[0mstd\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstd\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_data\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mmean\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstd\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mTypeError\u001b[0m: mean() received an invalid combination of arguments - got (MNIST, axis=int), but expected one of:\n * (Tensor input, torch.dtype dtype)\n      didn't match because some of the keywords were incorrect: axis\n * (Tensor input, tuple of names dim, bool keepdim, torch.dtype dtype, Tensor out)\n * (Tensor input, tuple of ints dim, bool keepdim, torch.dtype dtype, Tensor out)\n"
+     ]
+    }
+   ],
    "source": [
     "from torchvision.datasets import MNIST\n",
-    "from torchvision.transforms import ???\n",
+    "from torchvision.transforms import Compose, ToTensor, Normalize\n",
     "\n",
     "def calculate_mean_and_std() -> Tuple[float, float]:\n",
-    "    ???\n",
+    "    train_data = MNIST(\n",
+    "        root='.',\n",
+    "        download=True,\n",
+    "        train=True, \n",
+    "        transform=ToTensor(),\n",
+    "    )\n",
+    "    mean = torch.mean(train_data, axis=0)\n",
+    "    std = torch.std(train_data, axis=0)\n",
     "    return mean, std\n",
     "mean, std = calculate_mean_and_std()\n",
     "\n",
@@ -108,15 +128,15 @@
     "    root='.',\n",
     "    download=True,\n",
     "    train=True, \n",
-    "    ???\n",
+    "    transform=Compose([ToTensor(), Normalize(mean, std)]),\n",
     ")\n",
     "\n",
     "test_data = MNIST(\n",
     "    root='.', \n",
     "    download=True, \n",
     "    train=False, \n",
-    "    ???\n",
-    ")\n"
+    "    transform=Compose([ToTensor(), Normalize(mean, std)]),\n",
+    ")"
    ]
   },
   {
@@ -233,7 +253,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Linear."
+    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Linear.\n",
+    "\n",
+    "# Zbiory są separowalne liniowo więc da się. Używając sieci neuronowej bez ukrytych warstw oczywiście też działa.\n",
+    "\n",
+    "# Wspomniana wyżej separowalność na dwie kategorie za pomocą jednej prostej.\n",
+    "\n",
+    "# Skuteczność jest ta sama, więc nie ma sensu komplikować modelu. Bardziej nadaje się ta druga sieć."
    ]
   },
   {
@@ -252,7 +278,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Circle."
+    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Circle.\n",
+    "\n",
+    "# Potrzebujemy dwóch feature'ów: X1^2 oraz X2^2. Wtedy mamy dokładnie 0.001. \n",
+    "# Dla funkcji sigmoid potrzeba nieco więcej czasu aby osiągnąć 0.001 niż dla pozostałych funkcji aktywacji. \n",
+    "# Być może to jeden z powodów dla których preferowanymi w praktyce funkcjami są tanh oraz relu.\n",
+    "\n",
+    "# Dla 3-1 już działa w miarę stabilnie, tylko musimy chwilkę dłużej poczekać na 0.001 niż w przypadku np. 4-2-1.\n",
+    "# Dla 2-1 zwalnia gdzieś na 0.3 i zaczyna iść bardzo wolno, że niewiadomo czy się doczekamy.\n",
+    "# Użycie wyłącznie jednej warstwy nie dało pozytywnych rezultatów dla dowolnej liczby neuronów.\n",
+    "# Tak więc należy rozważać modele o przynajmniej dwóch warstwach.\n",
+    "\n",
+    "# Niestety nie udało się ani razu. Przyczyną jest \"Vanishing Gradient Problem\""
    ]
   },
   {
@@ -270,7 +307,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Spiral."
+    "# Tutaj należy opisać wyniki eksperymentów na zbiorze Spiral.\n",
+    "\n",
+    "# http://imgur.com/9qipaKWl.png (mam nadzieje ze nie wygasnie)\n",
+    "# inny przyklad http://imgur.com/03GSwzNl.png (model prawie ten sam tylko 1 wiecej feature kontrolnie)\n",
+    "\n",
+    "# Porownujac powyzsze obrazki mozna dojsc do wniosku ze to feature'y sa winne, jednak podjalem zbyt malo eksperymentow aby to potwierdzic."
    ]
   },
   {
@@ -422,7 +464,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
