--- a/lab/09_neural_networks.ipynb
+++ b/lab/09_neural_networks.ipynb
@@ -119,13 +119,10 @@
     "        train=True, \n",
     "        transform=ToTensor(),\n",
     "    ))\n",
-    "    # licze bez batchingu, moze zabraknac ramu\n",
+    "    # UWAGA! licze bez batchingu, moze byc problem z ramem\n",
     "    images = torch.FloatTensor()\n",
     "    for batch_id, (data, label) in enumerate(train_loader):\n",
     "        images = torch.stack((images, data[0][0]))\n",
-    "        #print(batch_id)\n",
-    "    #print(images[:10])\n",
-    "    #images = torch.FloatTensor(images)\n",
     "    \n",
     "    mean = torch.mean(images)\n",
     "    std = torch.std(images)\n",
