--- a/lab/11_CNN.ipynb
+++ b/lab/11_CNN.ipynb
@@ -32,7 +32,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1d982503f08>"
+       "<matplotlib.image.AxesImage at 0x7f70d9480908>"
       ]
      },
      "execution_count": 2,
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,21 +125,55 @@
     "    # get image dimensions\n",
     "    img_channels, img_height, img_width = image.shape \n",
     "    n_filters, filter_channels, filter_size, filter_size = filters.shape \n",
-    "    # calculate the dimensions of the output image\n",
-    "    out_height = ???\n",
-    "    out_width = ???\n",
-    "    out_channels = ???\n",
     "    \n",
-    "    # your code here\n",
-    "                \n",
-    "    return ???"
+    "    # calculate the dimensions of the output image\n",
+    "    out_height = ((img_height + 2 * padding - filter_size) // (stride)) + 1\n",
+    "    out_width = ((img_width + 2 * padding - filter_size) // (stride)) + 1\n",
+    "    out_channels = filter_size\n",
+    "\n",
+    "    pad = torch.nn.ZeroPad2d(padding)\n",
+    "    image = pad(image)\n",
+    "    \n",
+    "    output = torch.zeros(out_channels, out_height, out_width)\n",
+    "    \n",
+    "    for outch in range(out_channels):\n",
+    "        for y in range(out_height):\n",
+    "            h = y*stride\n",
+    "            for x in range(out_width):\n",
+    "                w = x*stride\n",
+    "                for inch in range(img_channels):               \n",
+    "                    input_window = image[inch, h:h+filter_size, w:w+filter_size]\n",
+    "                    filter_window = filters[outch, inch, :, :]\n",
+    "                    bias_window = bias[outch]\n",
+    "                    output[outch, h, w] += torch.sum(input_window * filter_window) + bias_window\n",
+    "    return output.squeeze()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([3, 30, 30])\n",
+      "torch.Size([2, 30, 30])\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-93-83a51c409af0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     19\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAssertionError\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Convolution Test\n",
     "\n",
@@ -159,6 +193,8 @@
     "    # PyTorch equivalent\n",
     "    out_torch = torch.conv2d(input=image.unsqueeze(0), weight=filt, bias=bias, padding=padding, stride=stride)\n",
     "    # asserts\n",
+    "    print(out.shape)\n",
+    "    print(out_torch.squeeze().shape)\n",
     "    assert out_torch.squeeze().shape == out.shape\n",
     "    assert torch.allclose(out, out_torch.squeeze(), atol=1e-5, rtol=1e-5)"
    ]
@@ -247,7 +283,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
