--- a/lab/11_CNN.ipynb
+++ b/lab/11_CNN.ipynb
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,11 +137,11 @@
     "    output = torch.zeros(out_channels, out_height, out_width)\n",
     "    \n",
     "    for outch in range(out_channels):\n",
-    "        for y in range(out_height-1):\n",
+    "        for y in range(out_height):\n",
     "            h = y*stride\n",
     "            for x in range(out_width):\n",
     "                w = x*stride\n",
-    "                for inch in range(filter_channels):               \n",
+    "                for inch in range(img_channels):               \n",
     "                    input_window = image[inch, h:h+filter_size, w:w+filter_size]\n",
     "                    filter_window = filters[outch, inch, :, :]\n",
     "                    bias_window = bias[outch]\n",
@@ -151,15 +151,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([2, 30, 30])\n",
-      "torch.Size([2, 30, 30])\n"
+      "tensor([[[-0.4313, -0.6178, -0.9172,  ..., -1.8679, -1.7400,  0.0000],\n",
+      "         [-0.1357, -0.6325, -0.9781,  ..., -1.5618, -1.4637,  0.0000],\n",
+      "         [-0.3231, -0.9011, -1.2407,  ..., -1.2854, -1.0893,  0.0000],\n",
+      "         ...,\n",
+      "         [-2.3134, -2.1868, -2.2601,  ..., -1.9607, -2.9052,  0.0000],\n",
+      "         [-2.0395, -2.1422, -2.3144,  ..., -1.6066, -2.6834,  0.0000],\n",
+      "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000]],\n",
+      "\n",
+      "        [[ 0.2892,  0.1149,  0.0514,  ..., -0.4578, -0.3748,  0.0000],\n",
+      "         [ 0.7045,  0.2809,  0.1164,  ..., -0.2420, -0.1889,  0.0000],\n",
+      "         [ 0.6320, -0.0032, -0.1341,  ..., -0.5204, -0.5091,  0.0000],\n",
+      "         ...,\n",
+      "         [ 0.1692, -0.6181, -0.5064,  ..., -1.1021, -1.5292,  0.0000],\n",
+      "         [-0.0437, -0.7349, -0.5405,  ..., -0.8304, -1.4327,  0.0000],\n",
+      "         [ 0.0000,  0.0000,  0.0000,  ...,  0.0000,  0.0000,  0.0000]]])\n",
+      "tensor([[[-0.4313, -0.6178, -0.9172,  ..., -1.8679, -1.7400, -1.6596],\n",
+      "         [-0.1357, -0.6325, -0.9781,  ..., -1.5618, -1.4637, -1.5167],\n",
+      "         [-0.3231, -0.9011, -1.2407,  ..., -1.2854, -1.0893, -1.0550],\n",
+      "         ...,\n",
+      "         [-2.3134, -2.1868, -2.2601,  ..., -1.9607, -2.9052, -0.8976],\n",
+      "         [-2.0395, -2.1422, -2.3144,  ..., -1.6066, -2.6834, -0.8317],\n",
+      "         [-2.1734, -2.2065, -2.2372,  ..., -1.9241, -2.8865, -1.3466]],\n",
+      "\n",
+      "        [[ 0.2892,  0.1149,  0.0514,  ..., -0.4578, -0.3748, -0.3801],\n",
+      "         [ 0.7045,  0.2809,  0.1164,  ..., -0.2420, -0.1889, -0.4290],\n",
+      "         [ 0.6320, -0.0032, -0.1341,  ..., -0.5204, -0.5091, -0.6345],\n",
+      "         ...,\n",
+      "         [ 0.1692, -0.6181, -0.5064,  ..., -1.1021, -1.5292,  0.2362],\n",
+      "         [-0.0437, -0.7349, -0.5405,  ..., -0.8304, -1.4327,  0.6824],\n",
+      "         [ 0.0388, -0.7476, -0.6475,  ..., -0.0375, -1.0842,  0.7768]]])\n"
      ]
     },
     {
@@ -169,7 +197,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-104-83a51c409af0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-113-eeae309e843f>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     20\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m     \u001b[0;32massert\u001b[0m \u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mout\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 22\u001b[0;31m     \u001b[0;32massert\u001b[0m \u001b[0mtorch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mallclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mout_torch\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msqueeze\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0matol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-5\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrtol\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1e-5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
